--- a/上海.md
+++ b/上海.md
@@ -1,3 +1,4 @@
 | 房东姓名 | 性别 | 租房位置 | 损失金额（¥） | 备注                                 |
 | -------- | ---- | -------- | ------------- | ------------------------------------ |
 | 梁娜娜   | 女   | 青浦区   | 1600          | 不退押金，打电话爱理不理，微信不回复 |
+| 谈智君 | 男 | 浦东新区 | 38000 | 帮找好租客转租，不退押金，不退剩余租金，已报警 |
